syntax = "proto3";

package se.locutus.proto;

option java_outer_classname = "Ng";

message RequestHeader {
  int32 api = 1;
  int32 id = 2;
}
message ResponseHeader {
 int32 id = 1;
}
message RequestData {
  RequestHeader request_header = 1;
  PingRequest ping_request = 2;
  StopDataRequest stop_data_request = 3;
  
}

message WidgetLoadResponseData {
  ResponseHeader response_header = 1;

  string line1 = 2;
  string line2 = 3;
  string minutes = 4;
  int32 seconds = 5;
  int32 color = 6;
  
  string idle_message = 7;
  string url = 8;
}

message AllDepaturesResponseData {
  ResponseHeader response_header = 1;
  
  StopData stop_data {
}

message LineBasedRequest {
  int32 group_of_line_id = 1;
  int32 direction_id = 2;
}

message DeparturesRequest {
  repeated string departures = 1;
}

message PingRequest {
  int64 local_timestamp_millis = 1;
}

message WidgetConfiguration {
  int64 widget_id = 1;
  repeated StopConfiguration stop_configuration = 2;
}

message StoredStopData {
  int64 site_id = 1;
  string canonical_name = 2;
  string display_name = 3;
  double lat = 4;
  double lng = 5;
}

message StopDataRequest {
  int64 site_id = 1;
  DeparturesRequest departures_request = 2;
  LineBasedRequest line_based_request = 3;
}

message StopConfiguration {
  StopData stop_data = 1;
  DeparturesRequest departures_request = 2;
  LineBasedRequest line_based_request = 3;
}